--- a/videos.html
+++ b/videos.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.png" rel="icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Cardo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="vendor/aos/aos.css" rel="stylesheet">
+  <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: PhotoFolio
@@ -43,7 +43,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/favicon.png" alt=""> 
+        <img src="img/favicon.png" alt=""> 
         <h1 class="sitename">Portfólio</h1>
       </a>
 
@@ -94,12 +94,12 @@
     <br>
     <br>
     <div class="video-grid">
-      <video src="assets/img/gallery/VIDEO FINAL.mp4" controls></video> 
-      <video src="assets/img/gallery/FINAL.mov" controls></video>
-      <video src="assets/img/gallery/Trabalho de alunos ESFF _ CRIAMAR _ Concurso Grande Ideia 2022 (1).mp4" controls></video>
-      <video src="assets/img/gallery/experimental2.mp4" controls></video>
-      <video src="assets/img/gallery/Trailer Final .mov" controls></video>
-      <video src="assets/img/gallery/projeto final.mov" controls></video>
+      <video src="img/gallery/VIDEO FINAL.mp4" controls></video> 
+      <video src="img/gallery/FINAL.mov" controls></video>
+      <video src="img/gallery/Trabalho de alunos ESFF _ CRIAMAR _ Concurso Grande Ideia 2022 (1).mp4" controls></video>
+      <video src="img/gallery/experimental2.mp4" controls></video>
+      <video src="img/gallery/Trailer Final .mov" controls></video>
+      <video src="img/gallery/projeto final.mov" controls></video>
     </div>
 
     <!-- Gallery Section 
@@ -111,9 +111,9 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-                <video src="assets/img/gallery/VIDEO FINAL.mp4" class="img-fluid" controls></video>
+                <video src="img/gallery/VIDEO FINAL.mp4" class="img-fluid" controls></video>
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                    <a href="assets/img/gallery/VIDEO FINAL.mp4" class="glightbox preview-link">
+                    <a href="img/gallery/VIDEO FINAL.mp4" class="glightbox preview-link">
                         <i class="bi bi-arrows-angle-expand"></i>
                     </a>
                 </div>
@@ -127,9 +127,9 @@
           <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-                <video src="assets/img/gallery/FINAL.mov" class="img-fluid" controls></video>
+                <video src="img/gallery/FINAL.mov" class="img-fluid" controls></video>
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                    <a href="assets/img/gallery/FINAL.mov" class="glightbox preview-link">
+                    <a href="img/gallery/FINAL.mov" class="glightbox preview-link">
                         <i class="bi bi-arrows-angle-expand"></i>
                     </a>
                 </div>
@@ -138,9 +138,9 @@
           <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-                <video src="assets/img/gallery/Trabalho de alunos ESFF _ CRIAMAR _ Concurso Grande Ideia 2022 (1).mp4" class="img-fluid" controls></video>
+                <video src="img/gallery/Trabalho de alunos ESFF _ CRIAMAR _ Concurso Grande Ideia 2022 (1).mp4" class="img-fluid" controls></video>
                 <div class="gallery-links d-flex align-items-center justify-content-center">
-                    <a href="assets/img/gallery/Trabalho de alunos ESFF _ CRIAMAR _ Concurso Grande Ideia 2022 (1).mp4" class="glightbox preview-link">
+                    <a href="img/gallery/Trabalho de alunos ESFF _ CRIAMAR _ Concurso Grande Ideia 2022 (1).mp4" class="glightbox preview-link">
                         <i class="bi bi-arrows-angle-expand"></i>
                     </a>
                 </div>
@@ -149,9 +149,9 @@
           <div class="row gy-4 justify-content-center">
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="gallery-item h-100">
-                  <video src="assets/img/gallery/experimental2.mp4" class="img-fluid" controls></video>
+                  <video src="img/gallery/experimental2.mp4" class="img-fluid" controls></video>
                   <div class="gallery-links d-flex align-items-center justify-content-center">
-                      <a href="assets/img/gallery/experimental2.mp4" class="glightbox preview-link">
+                      <a href="img/gallery/experimental2.mp4" class="glightbox preview-link">
                           <i class="bi bi-arrows-angle-expand"></i>
                       </a>
                   </div>
@@ -159,9 +159,9 @@
             <div class="row gy-4 justify-content-center">
               <div class="col-xl-3 col-lg-4 col-md-6">
                 <div class="gallery-item h-100">
-                    <video src="assets/img/gallery/Trailer Final .mov" class="img-fluid" controls></video>
+                    <video src="img/gallery/Trailer Final .mov" class="img-fluid" controls></video>
                     <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="assets/img/gallery/Trailer Final .mov" class="glightbox preview-link">
+                        <a href="img/gallery/Trailer Final .mov" class="glightbox preview-link">
                             <i class="bi bi-arrows-angle-expand"></i>
                         </a>
             </div>
@@ -203,14 +203,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/php-email-form/validate.js"></script>
+  <script src="vendor/aos/aos.js"></script>
+  <script src="vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
