--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html" >Home<br></a></li>
           <li><a href="about.html">Sobre Mim</a></li>
-          <li class="dropdown"><a href="gallery.html"  class="active" ><span >Galeria</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="gallery.html"  class="active" ><span >Galeria</span> 
             <ul>
           
             </ul> 
