--- a/about.html
+++ b/about.html
@@ -52,7 +52,10 @@
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html" class="active" >Sobre Mim</a></li>
           <li class="dropdown"><a href="gallery.html"><span>Galeria</span> 
-          <li><a href="contact.html">Contactos</a></li>
+          
+            <li class="dropdown"><a href="gallery.html"  ><span >Design</span> 
+            <li><a href="contact.html">Contactos</a></li>
+        
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
