--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,8 @@
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html">Sobre Mim</a></li>
           <li class="dropdown"><a href="gallery.html"><span>Galeria</span> 
+          
+            <li class="dropdown"><a href="design.html"  ><span >Design</span> 
             <ul>
             
             </ul>
