--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <ul>
           <li><a href="index.html" class="active">Home<br></a></li>
           <li><a href="about.html">Sobre Mim</a></li>
-          <li class="dropdown"><a href="gallery.html"><span>Galeria</span> 
+          <li class="dropdown"><a href="gallery.html"><span>Galeria</span>
+            
+            <li class="dropdown"><a href="design.html"  ><span >Design</span> 
           <li><a href="contact.html">Contactos</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
