--- a/design.html
+++ b/design.html
@@ -116,7 +116,7 @@
                 <a href="img/gallery/gallery-14.jpg"  class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -125,7 +125,17 @@
                 <a href="img/gallery/gallery-15.png" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
+          </div>
+
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="img/gallery/gallery-17.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="img/gallery/gallery-17.jpg" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+              </div>
+            </div>
           </div><!-- End Gallery Item -->
+
 
           <!--div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
