--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
           <li><a href="index.html" >Home<br></a></li>
           <li><a href="about.html">Sobre Mim</a></li>
           <li class="dropdown"><a href="gallery.html"  class="active" ><span >Galeria</span> 
-           
+            <li class="dropdown"><a href="design.html"  class="active" ><span >Vídeos</span>  
             <li class="dropdown"><a href="design.html"  ><span >Design</span>  
             <ul>
           
