--- a/design.html
+++ b/design.html
@@ -53,7 +53,7 @@
           <li><a href="about.html">Sobre Mim</a></li>
           <li class="dropdown"><a href="gallery.html"  ><span >Galeria</span> 
             <li class="dropdown"><a href="design.html"  class="active" ><span >Vídeos</span> 
-            <li class="dropdown"><a href="design.html"  class="active" ><span >Design</span> 
+            <li class="dropdown"><a href="design.html" ><span >Design</span> 
             <ul>
           
             </ul> 
