--- a/videos.html
+++ b/videos.html
@@ -108,7 +108,7 @@
             <div class="gallery-item h-100">
               <img src="img/gallery/gallery-16.mp4" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="img/gallery/gallery-13.png"  class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="img/gallery/gallery-16.mp4"  class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
