--- a/videos.html
+++ b/videos.html
@@ -82,7 +82,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Galeria de Vídeos</h1>
+              <h1>Vídeos</h1>
           
             </div>
           </div>
