--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="index.html" class="active">Home<br></a></li>
           <li><a href="about.html">Sobre Mim</a></li>
           <li class="dropdown"><a href="gallery.html"><span>Galeria</span>
-            <li class="dropdown"><a href="design.html"><span >Vídeos</span>  
+            <li class="dropdown"><a href="videos.html"><span >Vídeos</span>  
             <li class="dropdown"><a href="design.html"  ><span >Design</span> 
           <li><a href="contact.html">Contactos</a></li>
         </ul>
