--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html" class="active" >Sobre Mim</a></li>
           <li class="dropdown"><a href="gallery.html"><span>Galeria</span> 
-            <li class="dropdown"><a href="design.html"><span >Vídeos</span> 
-            <li class="dropdown"><a href="gallery.html"  ><span >Design</span> 
+            <li class="dropdown"><a href="videos.html"><span >Vídeos</span> 
+            <li class="dropdown"><a href="design.html"  ><span >Design</span> 
             <li><a href="contact.html">Contactos</a></li>
         
         </ul>
